apps/media/download-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: download-stack
  ports:
    - name: sabnzbd
      port: 8080
      targetPort: sabnzbd
    - name: qbittorrent
      port: 8090
      targetPort: qbittorrent
    - name: prowlarr
      port: 9696
      targetPort: prowlarr
    - name: radarr
      port: 7878
      targetPort: radarr
    - name: sonarr
      port: 8989
      targetPort: sonarr
